--- a/task7/docker-compose.yml
+++ b/task7/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ./artifacts:/$CATALINA_HOME/webapps/
+      - ./artifacts:/usr/local/tomcat/webapps/
     networks:
       - task7
     depends_on:
