--- a/task7/builder/Dockerfile
+++ b/task7/builder/Dockerfile
@@ -4,8 +4,8 @@ RUN apt-get install -y \
         git \
         default-jdk \
         maven
-#RUN mkdir -p /usr/local/builddir
 WORKDIR /usr/local/builddir
 RUN git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello.git
-WORKDIR boxfuse-sample-java-war-hello
+WORKDIR /usr/local/builddir/boxfuse-sample-java-war-hello
 RUN mvn package
+CMD ["/bin/bash"]
