--- a/task7/docker-compose.yml
+++ b/task7/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   builder:
     build: builder
     volumes:
-      - ./artifacts:/usr/local/builddir
+      - ./artifacts:/usr/local/buildout
     networks:
       - task7
 
