--- a/task7/builder/Dockerfile
+++ b/task7/builder/Dockerfile
@@ -4,8 +4,10 @@ RUN apt-get install -y \
         git \
         default-jdk \
         maven
-WORKDIR /usr/local/builddir
-RUN git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello.git
-WORKDIR /usr/local/builddir/boxfuse-sample-java-war-hello
-RUN mvn package
-CMD ["/bin/bash"]
+RUN mkdir -p /usr/local/builddir \
+        && cd /usr/local/builddir \
+        && mkdir -p /usr/local/buildout \
+        && git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello.git \
+        && cd boxfuse-sample-java-war-hello \
+        && mvn package
+CMD cp -R /usr/local/builddir/boxfuse-sample-java-war-hello/target/* /usr/local/buildout
