--- a/task7/builder/Dockerfile
+++ b/task7/builder/Dockerfile
@@ -1,13 +1,25 @@
 FROM ubuntu:16.04
+
+ARG BUILD_PATH
+ARG BUILD_OUT
+ARG DEST_PATH
+
+ENV DP=$DEST_PATH
+ENV BO=$BUILD_OUT
+ENV BP=$BUILD_PATH
+
 RUN apt-get update
 RUN apt-get install -y \
         git \
         default-jdk \
-        maven
-RUN mkdir -p /usr/local/builddir \
-        && cd /usr/local/builddir \
-        && mkdir -p /usr/local/buildout \
+        maven \
+        mc
+RUN mkdir -p "${DEST_PATH}/${BUILD_PATH}"
+#       && mkdir -p "${DEST_PATH}/${BUILD_OUT}" created by volume definition
+
+CMD cd "${DP}/${BP}" \
+        && rm -rf \
         && git clone https://github.com/boxfuse/boxfuse-sample-java-war-hello.git \
         && cd boxfuse-sample-java-war-hello \
-        && mvn package
-CMD cp -R /usr/local/builddir/boxfuse-sample-java-war-hello/target/* /usr/local/buildout
+        && mvn package \
+        && cp -R ${DP}/${BP}/boxfuse-sample-java-war-hello/target/* "${DP}/${BO}"
