deployer minimized to 5.85kB (virtual 141MB)

--- a/task7/deployer/Dockerfile
+++ b/task7/deployer/Dockerfile
@@ -3,16 +3,17 @@ FROM alpine:3.7
 ARG DEST_PATH
 ENV DP=$DEST_PATH
 
-RUN apk update \
-        && apk add openjdk8 \
-        && apk add wget
+RUN apk add openjdk8
+RUN apk add --no-cache --virtual .service-package wget
 
 WORKDIR ${DEST_PATH}/tomcat/
-RUN wget https://apache-mirror.rbc.ru/pub/apache/tomcat/tomcat-9/v9.0.45/bin/apache-tomcat-9.0.45.tar.gz -O /tmp/tomcat9.0.45.tar.gz
+RUN wget https://apache-mirror.rbc.ru/pub/apache/tomcat/tomcat-9/v9.0.45/bin/apache-tomcat-9.0.45.tar.gz -O /tmp/tomcat9.0.45.tar.gz \
+#       && mkdir /tmp/apache-tomcat-9.0.45 \
+        && tar xvfz /tmp/tomcat9.0.45.tar.gz -C /tmp \
+        && cp -Rv /tmp/apache-tomcat-9.0.45/* ${DEST_PATH}/tomcat/ \
+        && rm -rf /tmp
 
-WORKDIR /tmp/
-RUN tar xvfz /tmp/tomcat9.0.45.tar.gz \
-        && cp -Rv /tmp/apache-tomcat-9.0.45/* ${DEST_PATH}/tomcat/
+RUN apk del .service-package
 
 EXPOSE 8080
 
