--- a/task8/swarmed_web/Dockerfile
+++ b/task8/swarmed_web/Dockerfile
@@ -6,6 +6,7 @@ ENV DP=$DEST_PATH
 RUN apk add openjdk8
 RUN apk add --no-cache --virtual .service-package wget git
 
+RUN  mkdir ${DEST_PATH}/tomcat/
 WORKDIR ${DEST_PATH}/tomcat/
 RUN wget https://apache-mirror.rbc.ru/pub/apache/tomcat/tomcat-9/v9.0.45/bin/apache-tomcat-9.0.45.tar.gz -O /tmp/tomcat9.0.45.tar.gz \
         && tar xvfz /tmp/tomcat9.0.45.tar.gz -C /tmp \
