--- a/task9/deploy/tasks/main.yml
+++ b/task9/deploy/tasks/main.yml
@@ -4,3 +4,9 @@
   apt:
     name: tomcat9
     state: present
+#- name: Transfer artifact to deploy nodes
+#  synchronize:
+#    src: "{{ loc_path }}/boxfuse-sample-java-war-hello/target/hello-1.0.war"
+#    dest: /var/lib/tomcat9/webapps/hello-1.0.war
+#    mode: pull
+
