--- a/task11_2/Dockerfile
+++ b/task11_2/Dockerfile
@@ -1,3 +1,3 @@
 FROM alpine:3.7
-RUN apk add git openjdk8 maven docker bash
+RUN apk add git openjdk8 maven docker bash openssh-client
 VOLUME /usr/local/volume
