--- a/task11_2/Dockerfile
+++ b/task11_2/Dockerfile
@@ -1,4 +1,5 @@
 FROM alpine:3.7
 RUN apk add git openjdk8 maven docker bash openssh-client
+RUN mkdir p /root/.ssh
 COPY id_rsa /root/.ssh/id_rsa
 RUN chmod 600 /root/.ssh/id_rsa
