build image fixes

--- a/final_task/Dockerfile
+++ b/final_task/Dockerfile
@@ -7,12 +7,12 @@ RUN apk add openjdk8
 RUN apk add --no-cache --virtual .service-package wget
 
 WORKDIR ${DEST_PATH}/tomcat/
-RUN wget https://apache-mirror.rbc.ru/pub/apache/tomcat/tomcat-9/v9.0.45/bin/apache-tomcat-9.0.45.tar.gz -O /tmp/tomcat9.0.45.tar.gz \
-        && tar xvfz /tmp/tomcat9.0.45.tar.gz -C /tmp \
-        && cp -Rv /tmp/apache-tomcat-9.0.45/* ${DEST_PATH}/tomcat/ \
+RUN wget https://apache-mirror.rbc.ru/pub/apache/tomcat/tomcat-9/v9.0.46/bin/apache-tomcat-9.0.46.tar.gz -O /tmp/tomcat9.0.46.tar.gz \
+        && tar xvfz /tmp/tomcat9.0.46.tar.gz -C /tmp \
+        && cp -Rv /tmp/apache-tomcat-9.0.46/* ${DEST_PATH}/tomcat/ \
         && rm -rf /tmp
 
-ADD ~/tmp/hello-1.0.war ${DEST_PATH}/tomcat/webapps/
+ADD hello-1.0.war ${DEST_PATH}/tomcat/webapps/
 
 RUN apk del .service-package
 
